# MayaPluginSample

./: .gitignore  CMakeLists.txt  README.md  pluginCmd.cpp  pluginCmd.h
SAMPLE/: CMakeLists.txt
SAMPLE/src/: plugin_cmd.cpp
